system/css/seotoaster.css
/* ... */
#list_files p > a[title$='.doc']{ background-position: 0 0;}
#list_files p > a[title$='.exe']{ background-position: 0 -17px;}
#list_files p > a[title$='.mov']{ background-position: 0 -51px;}
#list_files p > a[title$='.mp3']{ background-position: 0 -68px;}
#list_files p > a[title$='.pdf']{ background-position: 0 -85px;}
#list_files p > a[title$='.psd']{ background-position: 0 -102px;}
#list_files p > a[title$='.swf']{ background-position: 0 -119px;}
#list_files p > a[title$='.txt']{ background-position: 0 -136px;}
#list_files p > a[title$='.wmv']{ background-position: 0 -153px;}
#list_files p > a[title$='.xls']{ background-position: 0 -170px;}
#list_files p > a[title$='.zip']{ background-position: 0 -187px;}

/*================= widgets icons ===============================*/
.widget-control-img {
	background: url('/system/images/widgets.jpg') no-repeat top left;
	height: 61px;
	width: 127px;
	cursor: pointer;
	float: left;
	margin-bottom: 4px;
	border: 1px solid #d3d3d3;
	border-radius: 2px;
	-moz-border-radius: 2px;
	-webkit-border-radius: 2px;
}
.widget-control-img#featured-area-img {
	background-position: 0 0;
}
.widget-control-img#featured-area-img:hover {
	background-position: 0 -61px;
}
.widget-control-img#featured-page-img {
	background-position: -127px 0;
}
.widget-control-img#featured-page-img:hover {
	background-position: -127px -61px;
}
.widget-control-img#forms-img {
	background-position: -254px 0;
}
.widget-control-img#forms-img:hover {
	background-position: -254px -61px;
}
.widget-control-img#gal-img {
	background-position: -381px 0;
}
.widget-control-img#gal-img:hover {
	background-position: -381px -61px;
}
.widget-control-img#rotator-img {
	background-position: -508px 0;
}
.widget-control-img#rotator-img:hover {
	background-position: -508px -61px;
}
.widget-control-img#related-img {
	background-position: -635px 0;
}
.widget-control-img#related-img:hover {
	background-position: -635px -61px;
}
.widget-control-img#rss-img {
	background-position: -762px 0;
}
.widget-control-img#rss-img:hover {
	background-position: -762px -61px;
}
.widget-control-img#search-img {
	background-position: -889px 0;
}
.widget-control-img#search-img:hover {
	background-position: -889px -61px;
}

